src/code/snapshots/tvm__code__tests__if_expr_in_var.snap
---
source: src/code/tests.rs
expression: "emit! (r#\"\n        let v = if true { 0 } else { 1 };\n        v\n    \"#)"
---
fn main
  registers: 2
  literals: []
  bytecode:
    load_true dst=1
    jump_if_false condition=1 offset=3
    load_i16 dst=1 value=0
    jump offset=2
    load_i16 dst=1 value=1
    mov dst=0 src=1
    ret
