src/code/snapshots/tvm__code__tests__if_stmt.snap
---
source: src/code/tests.rs
expression: "emit!\n(r#\"\n        if true {\n            0\n        } else if true {\n            1\n        } else {\n            2\n        };\n    \"#)"
---
fn main
  registers: 2
  literals: []
  bytecode:
    load_true dst=1
    jump_if_false condition=1 offset=3
    load_i16 dst=1 value=0
    jump offset=6
    load_true dst=1
    jump_if_false condition=1 offset=3
    load_i16 dst=1 value=1
    jump offset=2
    load_i16 dst=1 value=2
    load_unit dst=0
    ret
