src/code/snapshots/tvm__code__tests__literals.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        let v = 0;\n        let v = 1.0;\n        let v = true;\n        let v = false;\n        let v = \"test\";\n        let v = \"\\nyo\\n\";\n    \"#)"
---
function "main" {
  registers: 2 (0 params)
  literals: [
    Num(1.0)
    Str("test")
    Str("\nyo\n")
  ]
  bytecode: (9 ops) [
    smi 0, r1       // let v = 0;
    lit [0], r1     // let v = 1.0;
    bool true, r1   // let v = true;
    bool false, r1  // let v = false;
    lit [1], r1     // let v = "test";
    lit [2], r1     // let v = "\nyo\n";
    unit r0         // 
    ret             // 
    stop            //   
  ]
}


