src/code/snapshots/tvm__code__tests__variable_copy.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        let a = 0;\n        let b = a;\n    \"#)"
---
function "main" {
  registers: 3 (0 params)
  literals: []
  bytecode: (4 ops) [
    smi 0, r1   // let a = 0;
    mov r1, r2  // let b = a;
    unit r0     // 
    ret         //   
  ]
}


