src/code/snapshots/tvm__code__tests__variable_move.snap
---
source: src/code/tests.rs
expression: "emit! (r#\"\n        let a = 0;\n        let a = a;\n        let b = 0;\n    \"#)"
---
fn main
  registers: 3
  literals: []
  bytecode:
    load_i16 dst=1 value=0
    load_i16 dst=2 value=0
    load_unit dst=0
    ret
